# zip-to-chat

./: .gitignore  README.md  pyproject.toml
src/: cli.py  const.py  core.py
