[tool.poetry]
name = "zip-to-chat"
version = "0.1.0"
description = "Анализатор ZIP-архивов репозиториев"
authors = ["Dubovitskiy George <gdubovitskiy@ya.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.9.0,<0.10.0"
click = "~8.1.3"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"
colorlog = "^6.9.0"

[tool.poetry.scripts]
zip-to-chat = "src.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"